bug fix overflow x

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,6 +1,6 @@
 
 main{
 transition: margin-left 0.3s ease;
-
+overflow-x:hidden;
 
 }
